--- a/src/Component/navbar/Navbar.scss
+++ b/src/Component/navbar/Navbar.scss
@@ -1,10 +1,14 @@
 .navbar{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    background-color: #013914;
+    align-items: center;
+    color: white;
     .container{
         display: flex;
         justify-content: space-between;
         width: 1400px;
+        padding: 20px 0px;
         .text{
             font-size: 34px;
             font-weight: bold;
@@ -20,7 +24,24 @@
             align-items: center;
             gap: 24px;
             font-weight: 500;
-            span{}
+            button{
+              color: white;
+              background-color: transparent;
+              padding: 10px 20px;
+              border-radius: 5px;
+              border:1px solid white;
+
+              &:hover{
+                background-color: #1dbf73;
+                border-color:#1dbf73;
+              }
+             
+            }
+
         }
+    }
+    .menu{
+     width: 1400px;
+     padding: 10px , 0px;
     }
 }
