--- a/src/Component/navbar/Navbar.scss
+++ b/src/Component/navbar/Navbar.scss
@@ -1,9 +1,20 @@
 .navbar{
+  position: sticky;
+  top: 0;
     display: flex;
     flex-direction: column;
     background-color: #013914;
     align-items: center;
     color: white;
+   &.active{
+    background-color: white;
+    color: black;
+   }
+    hr{
+      height: 0px;
+      border: 0.5px solid rgb(92, 91, 91);
+      width: 100%;
+    }
     .container{
         display: flex;
         justify-content: space-between;
@@ -41,7 +52,10 @@
         }
     }
     .menu{
+      display: flex;
+      justify-content: space-between;
      width: 1400px;
-     padding: 10px , 0px;
+     padding: 10px 0px;
     }
+    
 }
