--- a/src/Component/navbar/Navbar.scss
+++ b/src/Component/navbar/Navbar.scss
@@ -6,13 +6,14 @@
     background-color: #013914;
     align-items: center;
     color: white;
+    transition: 0.5s all ease;
    &.active{
     background-color: white;
     color: black;
    }
     hr{
       height: 0px;
-      border: 0.5px solid rgb(92, 91, 91);
+      border: 0.3px solid rgb(188, 182, 182);
       width: 100%;
     }
     .container{
@@ -35,6 +36,39 @@
             align-items: center;
             gap: 24px;
             font-weight: 500;
+          .user{
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            cursor: pointer;
+            position: relative;
+
+
+            img{
+              width: 32px;
+              height: 32px;
+              border-radius: 50%;
+              object-fit: cover;
+            }
+            .options{
+              display: flex;
+              flex-direction: column;
+              gap: 10px;
+              position: absolute;
+              background-color: white;
+              border-radius: 10px;
+              border: 1px solid gray;
+              top: 50px;
+              right: 0;
+              padding: 20px;
+              width: 200px;
+              font-weight: 300;
+              color:gray
+            }
+
+
+          }
+
             button{
               color: white;
               background-color: transparent;
